<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seed_r7_gazebo</name>
  <version>0.3.4</version>
  <description>Gazebo Sim (Harmonic) simulation package for SEED-Noid-Mover robot (typef)</description>
  <maintainer email="y.shiigi@thk.co.jp">Yasuto Shiigi</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>gz_sim_vendor</build_depend>
  <build_depend>gz_plugin_vendor</build_depend>
  <build_depend>gz_math_vendor</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>gz_sim_vendor</exec_depend>
  <exec_depend>gz_plugin_vendor</exec_depend>
  <exec_depend>gz_math_vendor</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>seed_r7_description</exec_depend>
  <exec_depend>seed_r7_typef_moveit_config</exec_depend>
  <exec_depend>seed_r7_navigation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
