<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seed_r7_robot_interface</name>
  <version>0.3.4</version>
  <description>Stroke converter plugins for SEED-Solutions R7 robot models</description>

  <maintainer email="hi.kondo@thk.co.jp">hi.kondo</maintainer>
  <license>BSD</license>
  <author>Kazuhiro Sasabuchi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>seed_r7_ros_controller</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
