<?xml version="1.0"?>
<package format="3">
  <name>seed_r7_ros_controller</name>
  <version>0.3.4</version>
  <description>The seed_r7_ros_controller package (ROS2 Jazzy)</description>

  <maintainer email="hi.kondo@thk.co.jp">hi.kondo</maintainer>
  <license>BSD</license>

  <author>Yohei Kakiuchi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>diagnostic_updater</depend>
  <depend>angles</depend>
  <depend>seed_smartactuator_sdk</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
