<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seed_r7_ros_pkg</name>
  <version>0.3.4</version>
  <description>Meta package for SEED-Noid-Mover robot (typef).</description>
  <maintainer email="hi.kondo@thk.co.jp">hi.kondo</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>seed_r7_description</exec_depend>
  <exec_depend>seed_r7_typef_moveit_config</exec_depend>
  <exec_depend>seed_r7_moveit_config</exec_depend>
  <exec_depend>seed_r7_robot_interface</exec_depend>
  <exec_depend>seed_r7_ros_controller</exec_depend>
  <exec_depend>seed_r7_bringup</exec_depend>
  <exec_depend>seed_r7_navigation</exec_depend>
  <exec_depend>seed_r7_gazebo</exec_depend>
  <exec_depend>seed_r7_samples</exec_depend>
  <!-- seed_r7_gazebo: pending migration -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
