<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seed_r7_samples</name>
  <version>0.3.4</version>
  <description>Sample programs for SEED-Noid-Mover robot (typef)</description>
  <maintainer email="y.shiigi@thk.co.jp">Yasuto Shiigi</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ build deps -->
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>seed_r7_ros_controller</build_depend>

  <!-- runtime -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>seed_r7_ros_controller</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
