<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seed_r7_moveit_config</name>
  <version>0.3.4</version>
  <description>Meta package for MoveIt2 configuration (typef).</description>
  <author email="y.shiigi@thk.co.jp">Yasuto Shiigi</author>
  <maintainer email="y.shiigi@thk.co.jp">Yasuto Shiigi</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>seed_r7_description</exec_depend>
  <exec_depend>seed_r7_typef_moveit_config</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
