<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seed_r7_typeg_arm_moveit_config</name>
  <version>0.3.0</version>
  <description>MoveIt2 configuration and launch files for SEED-Arm-Mover-typeG.</description>
  <author email="n.wada@thk.co.jp">Naruhiro Wada</author>
  <maintainer email="n.wada@thk.co.jp">Naruhiro Wada</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>seed_r7_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
